fix Byte Buddy  java 25 for test